feat: change all func Update from static json body into dynamic
