# controllers/refugee.go
@@ -63,6 +63,7 @@ func CreateRefugee(c *gin.Context) {
 // @Success 200 {object} structs.APIResponse
 // @Failure 404 {object} structs.APIResponse
 // @Failure 500 {object} structs.APIResponse
+// @Security BearerAuth
 // @Router /refugees [get]
 func GetAllRefugees(c *gin.Context) {
 	refugees, err := repository.GetAllRefugees(database.DbConnection)
@@ -95,6 +96,7 @@ func GetAllRefugees(c *gin.Context) {
 // @Success 200 {object} structs.APIResponse
 // @Failure 400 {object} structs.APIResponse
 // @Failure 404 {object} structs.APIResponse
+// @Security BearerAuth
 // @Router /refugees/{id} [get]
 func GetRefugeeByID(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
@@ -160,6 +162,13 @@ func UpdateRefugee(c *gin.Context) {
 
 	err = repository.UpdateRefugee(database.DbConnection, refugee)
 	if err != nil {
+		if err.Error() == "refugee not found" {
+			c.JSON(http.StatusNotFound, gin.H{
+				"error": "Data pengungsi tidak ditemukan",
+			})
+			return
+		}
+		
 		c.JSON(http.StatusInternalServerError, gin.H{
 			"error": "Gagal mengupdate data pengungsi",
 		})
@@ -203,36 +212,4 @@ func DeleteRefugee(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{
 		"message": "Data pengungsi berhasil dihapus",
 	})
-}
-
-// GetDistributionLogsByRefugeeID godoc
-// @Summary Get distribution logs by refugee ID
-// @Description Menampilkan daftar distribusi bantuan yang diterima oleh pengungsi tertentu
-// @Tags Refugee
-// @Produce json
-// @Param id path int true "Refugee ID"
-// @Success 200 {object} structs.APIResponse
-// @Failure 400 {object} structs.APIResponse
-// @Failure 404 {object} structs.APIResponse
-// @Failure 500 {object} structs.APIResponse
-// @Router /refugees/{id}/distribution-logs [get]
-func GetDistributionLogsByRefugeeID(c *gin.Context) {
-	refugeeID, err := strconv.Atoi(c.Param("id"))
-	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "ID pengungsi tidak valid"})
-		return
-	}
-
-	logs, err := repository.GetDistributionLogsByRefugeeID(database.DbConnection, refugeeID)
-	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "Gagal mendapatkan catatan distribusi bantuan"})
-		return
-	}
-
-	if len(logs) == 0 {
-		c.JSON(http.StatusNotFound, gin.H{"error": "Tidak ada distribusi bantuan untuk pengungsi ini"})
-		return
-	}
-
-	c.JSON(http.StatusOK, gin.H{"result": logs})
 }
