# docs/swagger.json
@@ -14,6 +14,11 @@
     "paths": {
         "/disasters": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Mendapatkan semua laporan bencana",
                 "produces": [
                     "application/json"
@@ -98,6 +103,11 @@
         },
         "/disasters/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Mendapatkan laporan bencana berdasarkan ID",
                 "produces": [
                     "application/json"
@@ -254,6 +264,11 @@
         },
         "/disasters/{id}/emergency-reports": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Menampilkan daftar laporan darurat untuk bencana tertentu",
                 "produces": [
                     "application/json"
@@ -301,6 +316,11 @@
         },
         "/disasters/{id}/evacuation-routes": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Menampilkan daftar jalur evakuasi untuk bencana tertentu",
                 "produces": [
                     "application/json"
@@ -400,6 +420,11 @@
         },
         "/disasters/{id}/refugees": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Menampilkan daftar pengungsi untuk bencana tertentu",
                 "produces": [
                     "application/json"
@@ -447,6 +472,11 @@
         },
         "/disasters/{id}/shelters": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Mendapatkan shelter berdasarkan ID bencana",
                 "produces": [
                     "application/json"
@@ -540,6 +570,11 @@
         },
         "/distribution_logs": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Mendapatkan daftar distribusi bantuan",
                 "consumes": [
                     "application/json"
@@ -624,6 +659,11 @@
         },
         "/distribution_logs/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Mendapatkan distribusi bantuan berdasarkan ID",
                 "consumes": [
                     "application/json"
@@ -809,6 +849,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Mencatat donasi",
                 "consumes": [
                     "application/json"
@@ -1045,6 +1090,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Mencatat laporan darurat",
                 "consumes": [
                     "application/json"
@@ -1243,6 +1293,11 @@
         },
         "/evacuation_routes": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Mendapatkan daftar jalur evakuasi",
                 "consumes": [
                     "application/json"
@@ -1327,6 +1382,11 @@
         },
         "/evacuation_routes/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Mendapatkan jalur evakuasi berdasarkan ID",
                 "consumes": [
                     "application/json"
@@ -1474,6 +1534,11 @@
         },
         "/logistics": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Mendapatkan daftar bantuan logistik",
                 "consumes": [
                     "application/json"
@@ -1558,6 +1623,11 @@
         },
         "/logistics/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Mendapatkan bantuan logistik berdasarkan ID",
                 "consumes": [
                     "application/json"
@@ -1705,6 +1775,11 @@
         },
         "/refugees": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Mendapatkan daftar pengungsi",
                 "consumes": [
                     "application/json"
@@ -1789,6 +1864,11 @@
         },
         "/refugees/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Mendapatkan data pengungsi berdasarkan ID",
                 "consumes": [
                     "application/json"
@@ -1934,55 +2014,13 @@
                 }
             }
         },
-        "/refugees/{id}/distribution-logs": {
-            "get": {
-                "description": "Menampilkan daftar distribusi bantuan yang diterima oleh pengungsi tertentu",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Refugee"
-                ],
-                "summary": "Get distribution logs by refugee ID",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Refugee ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/structs.APIResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/structs.APIResponse"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/structs.APIResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/structs.APIResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/shelters": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Mendapatkan daftar shelter",
                 "consumes": [
                     "application/json"
@@ -2061,6 +2099,11 @@
         },
         "/shelters/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Mendapatkan shelter berdasarkan ID",
                 "consumes": [
                     "application/json"
@@ -2208,6 +2251,11 @@
         },
         "/shelters/{id}/logistics": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Menampilkan daftar bantuan logistik yang tersedia di shelter tertentu",
                 "produces": [
                     "application/json"
@@ -2255,6 +2303,11 @@
         },
         "/shelters/{id}/refugees": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Menampilkan daftar pengungsi dalam shelter tertentu",
                 "produces": [
                     "application/json"
@@ -2691,70 +2744,6 @@
                 }
             }
         },
-        "/users/{id}/change-role": {
-            "put": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Admin dapat mengubah role siapa saja, sedangkan user hanya bisa mengubah role sendiri ke donor atau user",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Users"
-                ],
-                "summary": "Mengubah role pengguna",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "User ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "List role: admin, donor, user",
-                        "name": "role",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/structs.ChangeUserRole"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/structs.APIResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/structs.APIResponse"
-                        }
-                    },
-                    "403": {
-                        "description": "Forbidden",
-                        "schema": {
-                            "$ref": "#/definitions/structs.APIResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/structs.APIResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/users/{id}/donations": {
             "get": {
                 "security": [
@@ -2957,6 +2946,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Mencatat relawan",
                 "consumes": [
                     "application/json"
@@ -3165,14 +3159,6 @@
                     "type": "string"
                 },
                 "result": {}
-            }
-        },
-        "structs.ChangeUserRole": {
-            "type": "object",
-            "properties": {
-                "role": {
-                    "type": "string"
-                }
             }
         },
         "structs.Disaster": {
